mule-user-guide/v/3.4/studio-update-sites.adoc
= Studio Update Sites

[WARNING]
====
This page lists the URLs of all the update sites for *Studio Version 3.4.0.* Note that this version refers to the *version of Studio itself*, not the runtime(s) available within it.** **Please verify your Studio version before proceeding, as installing updates from the incorrect update sites can cause errors.

To check your version of Studio, go to **Mule Studio > About Mule Studio**.

* If you see *Version: 3.4.0* refer to this page.

* If you see *3.5.0*, please refer to the link:/mule-user-guide/v/3.6/studio-update-sites[current] version of this page.

* If you see *Anypoint Studio with 3.5.0-M4 Runtime (Early Access)*,  please refer to the link:/mule-user-guide/v/3.4/studio-update-sites[Early Access] version of this page.
====

To access these update sites in Studio:

. Go to **Help > Install New Software**
. Select one of these update sites from the drop-down menu next to the *Work with* field. 
. If you don't see the site you need, click *Add* to add it manually.

[width="100%",cols=",",options="header"]
|===
|Name |Studio Update Site URL |Contains |Notes
|*MuleStudio Update Site* |http://studio.mulesoft.org/3.4/updater a|
Updates for Anypoint Studio application itself.

DataMapper Designer updates.

SAP Connector

Mule ESB Server 3.4.0. EE |
|*Mule ESB Runtimes for Studio* |http://studio.mulesoft.org/runtimes a|
Mule ESB Server Runtime 3.4.0 CE

Mule ESB Server Runtime 3.3.3 EE

Mule ESB Server Runtime 3.4.0 EE

Mule ESB Server Runtime 3.4.1 EE

Mule ESB Server Runtime 3.4.2 EE |
|*MuleStudio Cloud Connectors Update Site* |http://repository.mulesoft.org/connectors/releases/2 a|All Community, Standard, and Premium Anypoint Connectors available for Studio installation. |Access a list of link:/mule-user-guide/v/3.4/anypoint-connectors[Anypoint Connectors already installed in studio] with this version.
|*Anypoint Enterprise Security* |http://security-update-site-1.3.s3.amazonaws.com/[http://security-update-site.s3.amazonaws.com] a|
Mule Security Module Extensions:

* CRC-32
* Encrypted Property Placeholder
* Encryption
* OAuth 2 Provider
* Security Filters
* Signature

Anypoint Studio Properties File Editor

|Note that you need an Enterprise license to run applications containing link:/mule-user-guide/v/3.4/anypoint-enterprise-security[Anypoint Enterprise Security] features.

|*Mule Studio Eclipse Plugin* |http://studio.mulesoft.org/3.4/plugin a|
Eclipse plugin version of Mule Studio

Selected Anypoint Connectors

DataMapper designer updates

SAP Connector
|Read more about installing link:/mule-user-guide/v/3.4/studio-in-eclipse[Mule Studio as an Eclipse Plugin].
|===

[WARNING]
====
*Are you behind a firewall?*

If you are on a network with firewall restrictions, you may find that the Studio update sites are blocked and you are unable to download extensions. Configure your firewall so that it allows the following sites, which will permit Studio to connect to the above update sites:

http://studio.mulesoft.org/[http://studio.mulesoft.org]

http://repository.mulesoft.org/connectors/releases/

http://download.eclipse.org/technology/m2e/releases

http://download.eclipse.org/eclipse/updates

http://subclipse.tigris.org/[http://subclipse.tigris.org]

http://findbugs.cs.umd.edu/eclipse/
====
